--- a/css/style.css
+++ b/css/style.css
@@ -97,8 +97,7 @@
   align-items: center;
   background: #fff;
   text-align: center;
-  transform: perspective(1000px) rotate(-30deg) skew(25deg)
-    translate(0, 0);
+  transform: perspective(1000px) rotate(-30deg) skew(25deg) translate(0, 0);
   transition: all 0.4s ease;
 }
 
@@ -210,17 +209,20 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   font-family: 'Montserrat', sans-serif;
   background-color: #000;
   color: #eee;
 }
-.container-type{
+
+.container-type {
   /* height: 100vh; */
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .container-type p {
   font-size: 3rem;
   padding: 0.5rem;
@@ -229,10 +231,12 @@ body {
   text-align: center;
   overflow: hidden;
 }
+
 .container-type p span.typed-text {
   font-weight: normal;
   color: #dd7732;
 }
+
 .container-type p span.cursor {
   display: inline-block;
   background-color: #ccc;
@@ -240,15 +244,31 @@ body {
   width: 3px;
   animation: blink 1s infinite;
 }
+
 .container-type p span.cursor.typing {
   animation: none;
 }
+
 @keyframes blink {
-  0%  { background-color: #ccc; }
-  49% { background-color: #ccc; }
-  50% { background-color: transparent; }
-  99% { background-color: transparent; }
-  100%  { background-color: #ccc; }
+  0% {
+    background-color: #ccc;
+  }
+
+  49% {
+    background-color: #ccc;
+  }
+
+  50% {
+    background-color: transparent;
+  }
+
+  99% {
+    background-color: transparent;
+  }
+
+  100% {
+    background-color: #ccc;
+  }
 }
 
 /* typing curser animation end */
@@ -2328,3 +2348,8 @@ a.brand:focus {
   }
 
 }
+
+
+/* ------------------------------------------------------------------------------------------- */
+/*  UI Elements
+/* ------------------------------------------------------------------------------------------- */
